--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.65",
         "symfony/debug-bundle": "7.2.*",
         "symfony/maker-bundle": "^1.61",
         "symfony/monolog-bundle": "^3.0",
