--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,11 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "fix": "php-cs-fixer fix",
+        "check": [
+            "php-cs-fixer fix --dry-run --diff"
+        ] 
     },
     "conflict": {
         "symfony/symfony": "*"
