--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,10 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.65",
+        "phpstan/phpstan": "^2.0",
+        "phpstan/phpstan-doctrine": "^2.0",
+        "phpstan/phpstan-phpunit": "^2.0",
+        "phpstan/phpstan-symfony": "^2.0",
         "symfony/debug-bundle": "7.2.*",
         "symfony/maker-bundle": "^1.61",
         "symfony/monolog-bundle": "^3.0",
@@ -71,6 +75,7 @@
         ],
         "fix": "php-cs-fixer fix",
         "check": [
+            "phpstan",
             "php-cs-fixer fix --dry-run --diff"
         ] 
     },
